--- a/pedidos.css
+++ b/pedidos.css
@@ -84,14 +84,15 @@
 }
 
 #suPedido{
-    color: white;
+    
+    color: seagreen;
     letter-spacing: 2px;
     top: 10px;
     border-radius: 50px;
     letter-spacing: 2px;
     left: 250px;
     position: relative;
-    background-color: rgb(0, 0, 0);
+    background-color: antiquewhite;
     padding: 10px;
     width: 500px;
     /* margin-left: 10px; */
